# SEUIL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: clang-format-check.yml
dependencies/: CMakeLists.txt
example/: main.cpp
include/UI/: Configuration.h  EventState.h  Events.h  ImageDataMgr.h  OpenGLRendererImpl.h  Panel.h  Renderer.h  RendererImpl.h  ResourceManager.h  Signal.h  UIElement.h
include/UI/detail/: ImageData.h  Quad.h
include/UI/elements/: Button.h  Image.h  ImageBase.h  ImagePanel.h  Label.h  Panel.h  Texture.h  UIElement.h
include/UI/font/: FTFontManager.h  FontAtlas.h  FontLoader.h  FontManager.h  ThreadPoolAtlasGenerator.hpp
include/UI/render/: DrawCommands.h  RendererImpl.h
resources/shaders/: SEUIL.frag  SEUIL.vert  SEUIL_IMAGE.frag  SEUIL_QUAD.frag  SEUIL_TEXT.frag  SEUIL_TEXT.vert
resources/shaders/chunks/: Border.glsl  ImageLayout.glsl  QuadLayout.glsl  TextLayout.glsl
src/: OpenGLRendererImpl.cpp  OpenGLRendererImpl.h  Panel.cpp  Renderer.cpp  UIElement.cpp
src/backends/LWGL/: LWGLRendererImpl.cpp  LWGLRendererImpl.h  LWGLResourceManager.cpp  LWGLResourceManager.h  Vertex.h
src/detail/: BindlessTextures.cpp  BindlessTextures.h  ImageData.cpp  Quad.h  SSBO.h  Shader.h
src/elements/: Button.cpp  Elements.cpp  Image.cpp  ImageBase.cpp  ImagePanel.cpp  Label.cpp  Panel.cpp  UIElement.cpp
src/font/: FontAtlas.cpp  FontLoader.cpp  ThreadPoolAtlasGenerator.h  ThreadPoolAtlasGenerator.hpp
src/font/ft/: FTFontManager.cpp
src/shader/: UI.frag  UI.vert
